# cosmic-ext-applet-executor

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  justfile
data/: io.github.cosmic_utils.executor-applet.desktop  io.github.cosmic_utils.executor-applet.metainfo.xml
src/: applet.rs  config.rs  main.rs
