[package]
name = "cosmic-ext-applet-executor"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "COSMIC applet that runs shell commands and displays their output in the panel"
authors = ["Ririck0"]
homepage = "https://github.com/ririck0/cosmic-ext-applet-executor/"
repository = "https://github.com/ririck0/cosmic-ext-applet-executor.git"

[profile.release]
lto = "fat"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["applet"] }
tracing = { version = "0.1.41", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["ansi","env-filter"] }
serde_json = "1.0"
dirs = "5.0"
tokio = { version = "1", features = ["rt", "time"] }
